--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,27 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name='description'
-      content='Kevin Long Web Developer Portfolio'
+      content='Kevin Long | Web Development Portfolio'
     />
+    <!-- twitter tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:site" content="" />
+    <meta name="twitter:creator" content="" /> -->
+    <meta name="twitter:title" content="Kevin Long | Web Developer" />
+    <meta name=”twitter:url” content=”https://kevinlong.dev/” />
+    <meta name="twitter:description" content="Web development portfolio for Kevin Long" />
+    <meta name="twitter:image" content="https://kevinlong.dev/kevDev_port_about.png" />
+    <meta name="twitter:image:alt" content="Screenshot of kevinlong.dev" />
+    <!-- facebook tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kevin Long | Web Development Portfolio" />
+    <meta property="og:description" content="Web development portfolio for Kevin Long" />
+    <meta property="og:url" content="https://kevinlong.dev" />
+    <meta property="og:image" content="https://kevinlong.dev/kevDev_port_about.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1211" />
+    <meta property="og:image:height" content="797" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/web_dev_icon-192.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>  
     <!--
@@ -29,7 +48,7 @@
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <div id="root" class=""></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
